--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <!-- eventuale brand/logo -->
       <a class="navbar-brand" href="#home"> <img src="https://i.imgur.com/g1s9F3t.png" alt="" width="5%"> </a>
-      <!-- toggler button -->
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
               aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- qui dentro i tuoi link -->
+
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
@@ -32,7 +30,7 @@
   </nav>
 
   <main>
-    <!-- Home Section -->
+    <!-- Home -->
     <section id="home" class="hero">
       <div class="container hero-content">
         <h1>Esperienza in Irlanda</h1>
@@ -42,12 +40,12 @@
     </section>
 
 ```
-<!-- Expanded Experience Section -->
+
 <section id="experience" class="experience">
   <div class="container">
     <h2>Un viaggio che lascia il segno</h2>
 
-    <!-- Arrivo -->
+    <!-- Prima settimana -->
     <div class="Primo arrivo">
       <h3>Prima settimana</h3>
       <h5>Stage linguistico</h5>
@@ -82,17 +80,7 @@
 
     <br>
 
-    <!-- Vita Quotidiana -->
-    <div class="stage daily-life">
-      <h3>*Fare parte su scuola*</h3>
-      <p>In una scuola affacciata sul mare abbiamo imparato come evolvere nel mondo del lavoro, sia da dipendenti sia da impfrenditori</p>
-      <div class="photo-area">
-        <div class="photos photo-daily">
-          <img src="img/daily1.jpg" alt="Caffè al pub">
-          <img src="img/daily2.jpg" alt="Liffey River">
-        </div>
-      </div>
-    </div>
+   
 
     <!-- Progetto PCTO -->
     <div class="stage pcto">
@@ -111,56 +99,43 @@
     
 </section>
 
-<!-- Skills Section -->
+<!-- Competenze -->
 <section id="skills" class="skills">
   <div class="container">
-    <h2>Competenze acquisite o migliorate in questo anno scolastico</h2>
+    <h2>Competenze acquisite o migliorate con questa esperienza</h2>
     <ul class="skills-list">
       <li>HTML &amp; CSS</li>
-      <li>Java</li>
       <li>Problem Solving</li>
       <li>Comunicazione in inglese</li>
-      <li>Gestione del tempo</li>
       <li>Autonomia</li>
       <li>Networking e teamwork</li>
       <li>Conoscenza del mondo del lavoro</li>
-      <li>Basi di mandarino</li>
     </ul>
   </div>
 </section>
 
-<!-- Gallery Section -->
+<!-- Galleria -->
 <section id="gallery" class="gallery">
   <div class="container">
     <h2>Galleria</h2>
     <div class="grid">
-      <!-- 20 immagini segnaposto -->
-      <img src="https://i.imgur.com/wAXeJfc.jpeg" alt="Foto 1">
-      <img src="https://i.imgur.com/jWZZ7Bc.jpeg" alt="Foto 2">
-      <img src="https://i.imgur.com/flTmr2m.jpeg" alt="Foto 3">
-      <img src="https://i.imgur.com/Hx3R33Q.jpeg" alt="Foto 4">
-      <img src="https://i.imgur.com/63Z5euG.jpeg" alt="Foto 5">
-      <img src="https://i.imgur.com/oLwuPIB.jpeg" alt="Foto 6">
-      <img src="https://i.imgur.com/wde92NI.jpeg" alt="">
-      <img src="https://i.imgur.com/MJOP4uR.jpeg" alt="Foto 8">
 
-      <img src="https://i.imgur.com/wnOQXTf.jpeg" alt="Foto 10">
-      <img src="https://i.imgur.com/sR5XmJN.jpeg" alt="Foto 11">
-      <img src="https://i.imgur.com/LgZe9qO.jpeg" alt="Foto 12">
-      <img src="https://i.imgur.com/9lUPHRe.jpeg" alt="Foto 9">
-      <img src="https://i.imgur.com/AgUpj6P.jpeg" alt="Foto 13">
-      <img src="https://i.imgur.com/PSCypue.jpegs" alt="Foto 14">
-      <img src="https://i.imgur.com/BcNTkCM.jpeg" alt="Foto 15">
-      <img src="https://i.imgur.com/YnsaaPA.jpeg" alt="Foto 16">
-      <img src="https://i.imgur.com/QY3mq67.jpeg" alt="Foto 17">
-      <img src="https://i.imgur.com/fqvGoeD.jpeg" alt="Foto 18">
-      <img src="https://i.imgur.com/ZLwXYKI.jpeg" alt="Foto 19">
-      <img src="https://i.imgur.com/bj9ih9A.jpeg" alt="Foto 20">
-      <img src="https://i.imgur.com/3M7sSG8.jpeg" alt="">
-      <img src="https://i.imgur.com/mVegRU2.jpeg" alt="">
-      <img src="https://i.imgur.com/eU3a9Ca.jpeg" alt="">
-      <img src="https://i.imgur.com/YGfFmDo.jpeg" alt="">
-      <img src="https://i.imgur.com/4beOeLl.jpeg" alt="">
+      <img src="https://i.imgur.com/flTmr2m.jpeg">
+      <img src="https://i.imgur.com/wde92NI.jpeg">
+      <img src="https://i.imgur.com/HDaIC12.jpeg">
+      <img src="https://i.imgur.com/wnOQXTf.jpeg">
+      <img src="https://i.imgur.com/sR5XmJN.jpeg">
+      <img src="https://i.imgur.com/LgZe9qO.jpeg">
+      <img src="https://i.imgur.com/AgUpj6P.jpeg">
+      <img src="https://i.imgur.com/PSCypue.jpegs">
+      <img src="https://i.imgur.com/YnsaaPA.jpeg">
+      <img src="https://i.imgur.com/QY3mq67.jpeg">
+      <img src="https://i.imgur.com/fqvGoeD.jpeg">
+      <img src="https://i.imgur.com/oLwuPIB.jpeg">
+      <img src="https://i.imgur.com/3M7sSG8.jpeg">
+      <img src="https://i.imgur.com/mVegRU2.jpeg">
+      <img src="https://i.imgur.com/YGfFmDo.jpeg">
+
 
     </div>
   </div>
@@ -170,7 +145,6 @@
 
   </main>
 
-  <!-- Footer -->
 
   <footer>
     © 2025 Marco Hlovatskyi.
